--- a/collaborative-filtering/index.html
+++ b/collaborative-filtering/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Open-Matching-Benchmark</title>
+    <title>Open-Match-Benchmark</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -89,21 +89,21 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Feedback</a>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new">Feedback</a>
                     </li>
                 </ul>
 
                 <div class="mb-5">
                     <h3 class="h6">Folk us on Github</h3>
                 </div>
-                <div class="mb-5">
+                <!-- <div class="mb-5">
                     <h3 class="h6">Join Wechat Group</h3>
-                </div>
+                </div> -->
             </div>
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Open Benchmarking for candidate item matching</h2>
+            <h2 class="mb-4">Open Benchmarking for Candidate Item Matching</h2>
             <p>Welcome to the open benchmarking site for candidate item matching.</p>
         </div>
     </div>
