--- a/collaborative-filtering/leaderboard/yelp18_x0.html
+++ b/collaborative-filtering/leaderboard/yelp18_x0.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Open-Matching-Benchmark Models</title>
+    <title>Open-Match-Benchmark</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -65,13 +65,13 @@
                         <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">LeaderBoard</a>
                         <ul class="collapse list-unstyled" id="LeadBoard">
                             <li>
-                                <a href="./amazonbooks_x0.html">amazonbooks_x0</a>
+                                <a href="./amazonbooks_x0.html">amazonbooks_x0_001</a>
                             </li>
                             <li>
-                                <a href="./yelp18_x0.html">yelp18_x0</a>
+                                <a href="./yelp18_x0.html">yelp18_x0_001</a>
                             </li>
                             <li>
-                                <a href="./gowalla_x0.html">gowalla_x0</a>
+                                <a href="./gowalla_x0.html">gowalla_x0_001</a>
                             </li>
                         </ul>
                     </li>
@@ -90,15 +90,15 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Feedback</a>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new">Feedback</a>
                     </li>
                 </ul>
                 <div class="mb-5">
                     <h3 class="h6">Fork on Github</h3>
                 </div>
-                <div class="mb-5">
+                <!-- <div class="mb-5">
                     <h3 class="h6">Join Wechat Group</h3>
-                </div>
+                </div> -->
             </div>
         </nav>
 
@@ -124,7 +124,7 @@
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://cdn.jsdelivr.net/gh/xue-pai/Open-CF-Benchmark/results/yelp18_x0.json"));
+            "https://cdn.jsdelivr.net/gh/xue-pai/Open-MATCH-Benchmark/results/yelp18_x0.json"));
     </script>
 </body>
 
