--- a/collaborative-filtering/models.html
+++ b/collaborative-filtering/models.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Open-Matching-Benchmark Models</title>
+    <title>Open-Match-Benchmark | Models</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -90,7 +90,7 @@
                         </ul>
                     </li> -->
                     <li>
-                        <a href="#">Feedback</a>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new">Feedback</a>
                     </li>
                 </ul>
                 <div class="mb-5">
