--- a/collaborative-filtering/models.html
+++ b/collaborative-filtering/models.html
@@ -21,7 +21,7 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="./index.html" class="logo">Open Matching Benchmark</a></h1>
+                <h1 style="font-size:34px"><a href="./index.html" class="logo">Open Match Benchmark</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="index.html">Introduction</a>
@@ -62,7 +62,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">LeaderBoard</a>
+                        <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Benmarking Results</a>
                         <ul class="collapse list-unstyled" id="LeadBoard">
                             <li>
                                 <a href="./leaderboard/amazonbooks_x0.html">amazonbooks_x0_001</a>
