--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -89,7 +89,7 @@
                     <li>
                         <a href="#">Call for Contributions</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#Links" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Related Links</a>
                         <ul class="collapse list-unstyled" id="Links">
                             <li>
@@ -99,9 +99,9 @@
                                 <a href="#">Open-CF-Benchmark</a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li>
-                        <a href="#">Feedback</a>
+                        <a href="https://github.com/xue-pai/Open-CTR-Benchmark/issues/new">Feedback</a>
                     </li>
                 </ul>
 
@@ -109,9 +109,9 @@
                     <!-- <button></button> -->
                     <h3 class="h6">Folk us on Github</h3>
                 </div>
-                <div class="mb-5">
+                <!-- <div class="mb-5">
                     <h3 class="h6">Join Wechat Group</h3>
-                </div>
+                </div> -->
             </div>
         </nav>
 
