--- a/candidate-item-matching/index.html
+++ b/candidate-item-matching/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://openbenchmark.github.io/collaborative-filtering/css/style.css">
+    <link rel="stylesheet" href="https://openbenchmark.github.io/candidate-item-matching/css/style.css">
     <meta name="robots" content="noindex, follow">
 </head>
 
@@ -96,6 +96,10 @@
                 <div class="mb-5">
                     <h3 class="h6">Folk us on Github</h3>
                 </div>
+                <div class='mb-6'>
+                    <button id="fat-btn" class="btn btn-primary" data-loading-text="Loading..." type="button"> 加载状态
+                    </button>
+                </div>
                 <!-- <div class="mb-5">
                     <h3 class="h6">Join Wechat Group</h3>
                 </div> -->
@@ -108,9 +112,9 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <!-- <script src="https://openbenchmark.github.io/collaborative-filtering/js/popper.js"></script>
-    <script src="https://openbenchmark.github.io/collaborative-filtering/js/bootstrap.min.js"></script>
-    <script src="https://openbenchmark.github.io/collaborative-filtering/js/main.js"></script> -->
+    <!-- <script src="https://openbenchmark.github.io/candidate-item-matching/js/popper.js"></script>
+    <script src="https://openbenchmark.github.io/candidate-item-matching/js/bootstrap.min.js"></script>
+    <script src="https://openbenchmark.github.io/candidate-item-matching/js/main.js"></script> -->
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
