--- a/candidate-item-matching/index.html
+++ b/candidate-item-matching/index.html
@@ -93,11 +93,11 @@
                     </li>
                 </ul>
 
-                <div class="mb-5">
-                    <h3 class="h6">Folk us on Github</h3>
-                </div>
+                <!-- <div class="mb-5">
+                    <h3 class="h6"></h3>
+                </div> -->
                 <div class='mb-6'>
-                    <button id="fat-btn" class="btn btn-primary" data-loading-text="Loading..." type="button"> 加载状态
+                    <button id="fat-btn" class="btn btn-primary" style="background:#a791e2" data-loading-text="Loading..." type="button"> Folk us on Github
                     </button>
                 </div>
                 <!-- <div class="mb-5">
