--- a/candidate-item-matching/index.html
+++ b/candidate-item-matching/index.html
@@ -97,7 +97,7 @@
                     <h3 class="h6"></h3>
                 </div> -->
                 <div class='mb-6'>
-                    <button id="fat-btn" class="btn btn-primary" style="background:#a791e2" data-loading-text="Loading..." type="button"> Folk us on Github
+                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2" data-loading-text="Loading..." type="button"> Fork us on Github
                     </button>
                 </div>
                 <!-- <div class="mb-5">
@@ -118,6 +118,14 @@
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#fork-btn").click(function() {
+                location.href = "https://github.com/openbenchmark/openbenchmark.github.io";
+            });
+        });
+    </script>
+
 </body>
 
 </html>
