--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Open-CTR-Benchmark</title>
+    <title>CTR Prediction Benchmark</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,7 +20,7 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="./index.html" class="logo">OpenCTR Benchmark</a></h1>
+                <h1 style="font-size:34px"><a href="./index.html" class="logo">CTR Prediction Benchmark</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="./index.html">Introduction</a>
