--- a/ctr-prediction/models.html
+++ b/ctr-prediction/models.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Open-CTR-Benchmark</title>
+    <title>CTR Prediction Benchmark | Models</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,7 +21,7 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="./index.html" class="logo">OpenCTR Benchmark</a></h1>
+                <h1 style="font-size:34px"><a href="./index.html" class="logo">CTR Prediction Benchmark</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="index.html">Introduction</a>
@@ -97,7 +97,7 @@
                                 <a href="#">FuxiCTR package</a>
                             </li>
                             <li>
-                                <a href="https://openbenchmark.github.io/collaborative-filtering">Open-CF-Benchmark</a>
+                                <a href="https://openbenchmark.github.io/candidate-item-matching">Open-CF-Benchmark</a>
                             </li>
                         </ul>
                     </li> -->
