--- a/candidate-matching/index.html
+++ b/candidate-matching/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>Open-Match-Benchmark</title>
+    <title>Candidate Matching Benchmark</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://openbenchmark.github.io/candidate-item-matching/css/style.css">
+    <link rel="stylesheet" href="https://openbenchmark.github.io/candidate-matching/css/style.css">
     <meta name="robots" content="noindex, follow">
 </head>
 
@@ -20,7 +20,7 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="./index.html" class="logo">Open Match Benchmark</a></h1>
+                <h1 style="font-size:34px"><a href="./index.html" class="logo">Candidate Matching Benchmark</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="./index.html">Introduction</a>
@@ -110,9 +110,9 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <!-- <script src="https://openbenchmark.github.io/candidate-item-matching/js/popper.js"></script>
-    <script src="https://openbenchmark.github.io/candidate-item-matching/js/bootstrap.min.js"></script>
-    <script src="https://openbenchmark.github.io/candidate-item-matching/js/main.js"></script> -->
+    <!-- <script src="https://openbenchmark.github.io/candidate-matching/js/popper.js"></script>
+    <script src="https://openbenchmark.github.io/candidate-matching/js/bootstrap.min.js"></script>
+    <script src="https://openbenchmark.github.io/candidate-matching/js/main.js"></script> -->
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/popper.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/openbenchmark/openbenchmark.github.io@0.0.1/ctr-prediction/js/main.js"></script>
