--- a/candidate-matching/leaderboard/yelp18_x0.html
+++ b/candidate-matching/leaderboard/yelp18_x0.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Open-Match-Benchmark</title>
+    <title>Candidate Matching Benchmark</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,7 +21,7 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="../index.html" class="logo">Open Match Benchmark</a></h1>
+                <h1 style="font-size:34px"><a href="../index.html" class="logo">Candidate Matching Benchmark</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="../index.html">Introduction</a>
