--- a/candidate-matching/models.html
+++ b/candidate-matching/models.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>Open-Match-Benchmark | Models</title>
+    <title>Candidate Matching Benchmark | Models</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://openbenchmark.github.io/candidate-item-matching/css/style.css">
+    <link rel="stylesheet" href="https://openbenchmark.github.io/candidate-matching/css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.css" />
     <meta name="robots" content="noindex, follow">
 </head>
@@ -21,7 +21,7 @@
 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1 style="font-size:34px"><a href="./index.html" class="logo">Open Match Benchmark</a></h1>
+                <h1 style="font-size:34px"><a href="./index.html" class="logo">Candidate Matching Benchmark</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="index.html">Introduction</a>
@@ -114,9 +114,9 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://openbenchmark.github.io/candidate-item-matching/js/popper.js"></script>
-    <script src="https://openbenchmark.github.io/candidate-item-matching/js/bootstrap.min.js"></script>
-    <script src="https://openbenchmark.github.io/candidate-item-matching/js/main.js"></script>
+    <script src="https://openbenchmark.github.io/candidate-matching/js/popper.js"></script>
+    <script src="https://openbenchmark.github.io/candidate-matching/js/bootstrap.min.js"></script>
+    <script src="https://openbenchmark.github.io/candidate-matching/js/main.js"></script>
     <script src="https://cdn.datatables.net/r/zf-5.5.2/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/no-data-to-display.js"></script>
