--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -87,7 +87,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Call for Contributions</a>
+                        <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/CONTRIBUTING.md">Call for Contributions</a>
                     </li>
                     <!-- <li>
                         <a href="#Links" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Related Links</a>
