--- a/ctr-prediction/leaderboard/criteo_x4_002.html
+++ b/ctr-prediction/leaderboard/criteo_x4_002.html
@@ -56,7 +56,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">LeaderBoard</a>
+                        <a href="#LeadBoard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Benchmarking Results</a>
                         <ul class="collapse list-unstyled" id="LeadBoard">
                             <li>
                                 <a href="./criteo_x4_001.html">criteo_x4_001</a>
