--- a/ctr-prediction/leaderboard/criteo_x4_001.html
+++ b/ctr-prediction/leaderboard/criteo_x4_001.html
@@ -105,8 +105,9 @@
                         <a href="https://github.com/xue-pai/Open-CTR-Benchmark/issues/new">Feedback</a>
                     </li>
                 </ul>
-                <div class="mb-5">
-                    <h3 class="h6">Fork on Github</h3>
+                <div class='mb-5'>
+                    <button id="fork-btn" class="btn btn-primary" style="background:#a791e2" data-loading-text="Loading..." type="button"> Fork us on Github
+                    </button>
                 </div>
                 <!-- <div class="mb-5">
                     <h3 class="h6">Join Wechat Group</h3>
@@ -136,7 +137,14 @@
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/results/criteo_x4_001.json"));
+            "https://raw.githubusercontent.com/xue-pai/Open-CTR-Benchmark/master/results/criteo_x4_001.json"));
+    </script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#fork-btn").click(function() {
+                location.href = "https://github.com/openbenchmark/openbenchmark.github.io";
+            });
+        });
     </script>
 </body>
 
