--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -101,7 +101,10 @@
                         </ul>
                     </li> -->
                     <li>
-                        <a href="https://github.com/xue-pai/Open-CTR-Benchmark/issues/new">Feedback</a>
+                        <a href="https://github.com/xue-pai/Open-CTR-Benchmark/issues/new" , target="_blank">Feedback</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/xue-pai/Open-CTR-Benchmark/blob/master/toolkits.md" , target="_blank">Toolkits</a>
                     </li>
                 </ul>
 
