--- a/candidate-matching/index.html
+++ b/candidate-matching/index.html
@@ -92,7 +92,10 @@
                         </ul>
                     </li> -->
                     <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new">Feedback</a>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new" ,target='_blank'>Feedback</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md" ,target='_blank'>Toolkits</a>
                     </li>
                 </ul>
 
