--- a/candidate-matching/models.html
+++ b/candidate-matching/models.html
@@ -93,7 +93,10 @@
                         </ul>
                     </li> -->
                     <li>
-                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new">Feedback</a>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/issues/new" ,target='_blank'>Feedback</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/xue-pai/Open-Match-Benchmark/blob/master/toolkits.md" ,target='_blank'>Toolkits</a>
                     </li>
                 </ul>
                 <div class='mb-5'>
