update new benchmark

--- a/ctr-prediction/leaderboard/criteo_x0_001.html
+++ b/ctr-prediction/leaderboard/criteo_x0_001.html
@@ -119,7 +119,7 @@
         </nav>
 
         <div id="content" class="p-4 p-md-5 pt-5">
-            <h2 class="mb-4">Benchmarking on avazu_x4_002</h2>
+            <h2 class="mb-4">Benchmarking on criteo_x4_001</h2>
             <p>Welecome to the open benchmarking site for CTR prediction.</p>
 
             <!-- Add tables and charts -->
@@ -140,7 +140,7 @@
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://raw.githubusercontent.com/xue-pai/Open-CTR-Benchmark/master/results/avazu_x4_002.json"));
+            "https://raw.githubusercontent.com/xue-pai/Open-CTR-Benchmark/master/results/criteo_x0_001.json"));
     </script>
     <script type="text/javascript">
         $(document).ready(function() {
