--- a/ctr-prediction/leaderboard/criteo_x4_001.html
+++ b/ctr-prediction/leaderboard/criteo_x4_001.html
@@ -65,7 +65,7 @@
                                 <a href="./criteo_x4_002.html">criteo_x4_002</a>
                             </li>
                             <li>
-                                <a href="#">criteo_x0_001</a>
+                                <a href="./criteo_x0_001.html">criteo_x0_001</a>
                             </li>
                             <li>
                                 <a href="./avazu_x4_001.html">avazu_x4_001</a>
@@ -74,16 +74,16 @@
                                 <a href="./avazu_x4_002.html">avazu_x4_002</a>
                             </li>
                             <li>
-                                <a href="#">avazu_x0_001</a>
+                                <a href="./avazu_x0_001.html">avazu_x0_001</a>
                             </li>
                             <li>
-                                <a href="#">kkbox_x4_001</a>
+                                <a href="./kkbox_x4_001.html">kkbox_x4_001</a>
                             </li>
                             <li>
-                                <a href="#">taobao_x0_001</a>
+                                <a href="./taobao_x0_001.html">taobao_x0_001</a>
                             </li>
                             <li>
-                                <a href="#">microvideo1.7m_x0_001</a>
+                                <a href="./microvideo1.7m_x0_001.html">microvideo1.7m_x0_001</a>
                             </li>
                         </ul>
                     </li>
