--- a/ctr-prediction/models.html
+++ b/ctr-prediction/models.html
@@ -74,17 +74,17 @@
                                 <a href="./leaderboard/avazu_x4_002.html">avazu_x4_002</a>
                             </li>
                             <li>
-                                <a href="#">avazu_x0_001</a>
+                                <a href="./leaderboard/avazu_x0_001.html">avazu_x0_001</a>
                             </li>
                             <li>
-                                <a href="#">kkbox_x4_001</a>
+                                <a href="./leaderboard/kkbox_x4_001.html">kkbox_x4_001</a>
                             </li>
                             <li>
-                                <a href="#">taobao_x0_001</a>
+                                <a href="./leaderboard/taobao_x0_001.html">taobao_x0_001</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="#">microvideo1.7m_x0_001</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </li>
                     <li>
