--- a/ctr-prediction/leaderboard/avazu_x4_001.html
+++ b/ctr-prediction/leaderboard/avazu_x4_001.html
@@ -21,7 +21,7 @@
                 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1><a href="./index.html" class="logo">BARS</a></h1>
+                <h1><a href="../index.html" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="../index.html">CTR Prediction</a>
