--- a/ctr-prediction/leaderboard/microvideo1.7m_x0_001.html
+++ b/ctr-prediction/leaderboard/microvideo1.7m_x0_001.html
@@ -21,7 +21,7 @@
                 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1><a href="./index.html" class="logo">BARS</a></h1>
+                <h1><a href="../index.html" class="logo">BARS</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
                         <a href="../index.html">CTR Prediction</a>
@@ -117,7 +117,7 @@
     <script src="../js/tablecharts.js"></script>
     <script type="text/javascript">
         $(document).ready(createTableChart('table1', 'chart1',
-            "https://raw.githubusercontent.com/xue-pai/Open-CTR-Benchmark/master/results/avazu_x4_001.json"));
+            "https://raw.githubusercontent.com/xue-pai/Open-CTR-Benchmark/master/results/microvideo1.7m_x0_001.json"));
     </script>
     <script type="text/javascript">
         $(document).ready(function() {
