--- a/ctr-prediction/index.html
+++ b/ctr-prediction/index.html
@@ -98,7 +98,7 @@
         <div id="content" class="p-4 p-md-5 pt-5">
             <h2 class="mb-4">BARS / Open-CTR-Benchmark</h2>
             <p><strong>Congratulations! You have found BARS, an awesome project aimed for open <u>B</u>enchm<u>A</u>rking for <u>R</u>ecommender <u>S</u>ystems.</strong></p>
-            <p>Click-through rate (CTR) prediction, or user response prediction in general, is an important task in recommender systems. The BARS project aims to build an open benchmark for CTR prediction, which consists of:</p>
+            <p>Click-through rate (CTR) prediction, or user response prediction in general, is an important task in the ranking phase of recommender systems. The BARS project aims to build an open benchmark for CTR prediction, which consists of:</p>
 
             <ul>
               <li>A curated list of CTR prediction models which have been tagged into different types, such as feature-interactions, user-interest-modeling, multi-task modeling, cross-domain modeling, AutoML, etc.</li>
